--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # API key for Google Generative AI (Gemini)
-GOOGLE_API_KEY=AIzaSyAR2cbxf0Wp66EF-_F6y5ZnLB3SyjGpbOY
+GOOGLE_API_KEY=""
+LLAMA_INDEX_API_KEY=""
 
 # Output directory for downloaded papers
 OUTPUT_DIR=./papers
