--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 arxiv==1.4.7
 google-generativeai==0.3.1
 requests==2.31.0
-python-dotenv==1.0.0
+python-dotenv
 click==8.1.7 
 llama-index
 llama-cloud-services
