--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,8 @@ google-generativeai==0.3.1
 requests==2.31.0
 python-dotenv
 click==8.1.7 
-llama-index
-llama-cloud-services
+llama_index
+llama_cloud_services
+flask==2.2.5
+flask-cors==4.0.0
+werkzeug==2.2.3
